# ts2ocaml

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  build.fs  build.fsproj  build.fsx  dune-project  fake  generate_ts_bindings.sh  global.json  monaco.d.ts  opam-switch  package-lock.json  package.json  ts2ocaml-jsoo-stdlib.opam  ts2ocaml.opam  ts2ocaml.sln  webpack.config.js
.config/: dotnet-tools.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
baselib/: README.md  bsconfig.json  package-lock.json  package.json  ts.ml  ts.mli
baselib/src/: Test.bs.js  Test.re  Ts.bs.js  Ts.re  Ts.res
dist_jsoo/: .gitignore  dune-project  ts2ocaml-jsoo-stdlib.opam  ts2ocaml-stdlib.opam
dist_jsoo/src/: dune
dist_rescript/: .gitignore  package-lock.json  package.json
dist_rescript/src/: Ts.res  Ts2ocaml_min.res  Ts__min.res  ts2ocaml.res
docs/: common_options.md  development.md  js_of_ocaml.md  modeling_subtyping.md  rescript.md
lib/: Common.fs  Extensions.fs  JsHelper.fs  Naming.fs  Parser.fs  Syntax.fs  TypeScriptHelper.fs  Typer.fs  ts2ml.fsproj
lib/Bindings/: BrowserOrNode.fs  Chalk.fs  Codeframe.fs  TypeScript.fs  YargsParser.fs
lib/DataTypes/: Graph.fs  Text.fs  Trie.fs
src/: App.fs  App.fsproj  Common.fs  Extensions.fs  JsHelper.fs  Main.fs  Naming.fs  Parser.fs  Syntax.fs  Target.fs  Text.fs  TypeScript.fs  Typer.fs  Utils.fs  Writer.fs  dune  ts2ocaml.fsproj  ts2ocaml_dom.mli  ts2ocaml_es.ml  ts2ocaml_es.mli  ts2ocaml_min.ml  ts2ocaml_min.mli  ts2ocaml_webworker.ml  ts2ocaml_webworker.mli
src/Bindings/: TypeScript.fs  Yargs.fs
src/DataType/: Graph.fs  Text.fs  Trie.fs
src/DataTypes/: Graph.fs  Text.fs  Trie.fs
src/Targets/: JsOfOCaml.fs  ParserTest.fs
src/Targets/JsOfOCaml/: Common.fs  OCamlHelper.fs  Target.fs  Writer.fs
src/Targets/ReScript/: Common.fs  ReScriptHelper.fs  Target.fs  Writer.fs
test/: .gitignore  package-lock.json  package.json  webpack.config.js
test/jsoo/: package.json
test/jsoo/src/: dune  main.ml
test/res/: .gitignore  bsconfig.json  package.json  rescript.json
test/res/src/: Ts.res  main.res
test/res/src/placeholder/: SVGElement.res
test/res/src/placeholders/: Iterable.res  ReadonlyMap.res
test/src/: dom.mli  dom_iterable.mli  dune  es2015.mli  es2016.mli  es2017.mli  es2018.mli  es2019.mli  es2020.mli  es5.mli  esnext.mli  main.ml  monaco.mli  node.mli  react.mli  react_modal.mli  stub.js  ts2ocaml_baselib.mli  typescript.mli
