(lang dune 2.7)
(name ts2ocaml-stdlib)
(version 0.0.0)

(maintainers "dev@ocsigen.org")
(authors
  "The ocsigen team")

(source (github ocsigen/ts2ocaml))

(generate_opam_files true)

(license Apache-2.0)

(package
  (name ts2ocaml-stdlib)
  (synopsis "Standard Library for ts2ocaml generated bindings")
  (description "You can choose not to use this standard library. See the documents in the repository.")
  (depends
    (ocaml (>= 4.08))
    (ojs (>= 1.0.8))))