(executable
  (name main)
  (libraries gen_js_api)
  (link_flags -no-check-prims)
  (preprocess (pps gen_js_api.ppx))
  (modes js)
  (js_of_ocaml
    (javascript_files stub.js))
)

(rule
  (targets ts2ocaml.ml)
  (deps ts2ocaml.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets typescript.ml)
  (deps typescript.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets node.ml)
  (deps node.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets monaco.ml)
  (deps monaco.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets react.ml)
  (deps react.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets react_modal.ml)
  (deps react_modal.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets main.js)
  (deps main.bc.js)
  (action (run cp %{deps} %{targets})))

(alias
  (name DEFAULT)
  (deps main.js main.html))

(rule
 (alias runtest)
 (deps main.js)
 (action
  (run node %{dep:./main.js})))
