(executable
  (name main)
  (libraries gen_js_api)
  (link_flags -no-check-prims)
  (preprocess (pps gen_js_api.ppx))
  (modes js)
  (js_of_ocaml
    (flags --pretty --enable deadcode --enable strict --enable inline)
    (javascript_files stub.js))
)

(rule
  (targets ts2ocaml_min.ml)
  (deps ts2ocaml_min.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets ts2ocaml_es.ml)
  (deps ts2ocaml_es.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets ts2ocaml_dom.ml)
  (deps ts2ocaml_dom.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets ts2ocaml_webworker.ml)
  (deps ts2ocaml_webworker.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets typescript.ml)
  (deps typescript.mli)
  (action (run %{bin:gen_js_api} %{deps})))

; (rule
;   (targets node.ml)
;   (deps node.mli)
;   (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets csstype.ml)
  (deps csstype.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets prop_types.ml)
  (deps prop_types.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets scheduler__tracing.ml)
  (deps scheduler__tracing.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets react.ml)
  (deps react.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets react_modal.ml)
  (deps react_modal.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets yargs_parser.ml)
  (deps yargs_parser.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets yargs.ml)
  (deps yargs.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets main.js)
  (deps main.bc.js)
  (action (run cp %{deps} %{targets})))

(alias
  (name DEFAULT)
  (deps main.js main.html))

(rule
 (alias runtest)
 (deps main.js)
 (action
  (run node %{dep:./main.js})))
